--- a/item.html
+++ b/item.html
@@ -34,7 +34,7 @@
     </header>
     <main class="container">
       <h1>Набор для путешествий "Baxter of California"</h1>
-      <nav class="item-breadcrumbs">
+      <nav class="breadcrumbs">
         <ul>
           <li>
             <a href="#">Главная</a>
@@ -51,10 +51,10 @@
         </ul>
       </nav>
       <section class="item-photos">
-        <img src="img/item-photo-1" width="200" height="200" alt="Набор для путешествий &quot;Baxter of California&quot;">
-        <img src="img/item-photo-2" width="100" height="100" alt="Набор для путешествий &quot;Baxter of California&quot;">
-        <img src="img/item-photo-3" width="100" height="100" alt="Набор для путешествий &quot;Baxter of California&quot;">
-        <img src="img/item-photo-4" width="100" height="100" alt="Набор для путешествий &quot;Baxter of California&quot;">
+        <img src="img/photo-item-1" width="200" height="200" alt="Набор для путешествий &quot;Baxter of California&quot;">
+        <img src="img/photo-item-2" width="100" height="100" alt="Набор для путешествий &quot;Baxter of California&quot;">
+        <img src="img/photo-item-3" width="100" height="100" alt="Набор для путешествий &quot;Baxter of California&quot;">
+        <img src="img/photo-item-4" width="100" height="100" alt="Набор для путешествий &quot;Baxter of California&quot;">
       </section>
       <section class="item-description">
         <p>Есть в наличии</p>
