Add images. Add the paths to the pictures. Fix errors.

--- a/index.html
+++ b/index.html
@@ -65,11 +65,12 @@
           </ul>
           <a class="btn" href="#">Все новости</a>
         </div>
+        <img src="img/separator.png" with="8" height="278" alt="Разделитель">
         <div class="index-content-right">
           <h2 class="index-content-title">Галерея</h2>
           <div class="gallery">
             <figure class="gallery-conent">
-              <img src="img/photo-1.jpg" width="268" height="164" alt="">
+              <img src="img/gallery.jpg" width="268" height="164" alt="">
             </figure>
             <button class="btn gallery-prev" type="button">Назад</button>
             <button class="btn gallery-next" type="button">Вперёд</button>
@@ -92,6 +93,7 @@
           <a class="btn" href="#">Как проехать</a>
           <a class="btn" href="#">Обратная связь</a>
         </div>
+        <img src="img/separator.png" with="8" height="278" alt="Разделитель">
         <div class="index-content-right">
           <h2 class="index-content-title">Записаться</h2>
           <p>Укажите желаемую дату и время, и мы свяжемся с вами для подтверждения брони
@@ -115,9 +117,9 @@
         </section>
         <section class="footer-social">
           <p>Давайте дружить!</p>
-          <a class="social-btn social-btn-vk" href="#">ВКонтакте</a>
-          <a class="social-btn social-btn-fb" href="#">Фэйсбук</a>
-          <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
+          <a class="social-btn social-btn-vk" href="#"><img src="img/vk.png" width="12" height="12" alt="ВКонтакте"></a>
+          <a class="social-btn social-btn-fb" href="#"><img src="img/fb.png" width="12" height="12" alt="Фэйсбук"></a>
+          <a class="social-btn social-btn-inst" href="#"><img src="img/inst.png" width="12" height="12" alt="Инстаграм"></a>
         </section>
         <section class="footer-copyright">
           <p>Разработано:</p>
