--- a/shop-item.html
+++ b/shop-item.html
@@ -51,10 +51,10 @@
         </ul>
       </nav>
       <section class="item-photos">
-        <img src="img/photo-item-1" width="200" height="200" alt="Набор для путешествий &quot;Baxter of California&quot;">
-        <img src="img/photo-item-2" width="100" height="100" alt="Набор для путешествий &quot;Baxter of California&quot;">
-        <img src="img/photo-item-3" width="100" height="100" alt="Набор для путешествий &quot;Baxter of California&quot;">
-        <img src="img/photo-item-4" width="100" height="100" alt="Набор для путешествий &quot;Baxter of California&quot;">
+        <img src="img/shop-item/photo-item-1.jpg" width="486" height="524" alt="Набор для путешествий &quot;Baxter of California&quot;">
+        <img src="img/shop-item/photo-item-2.jpg" width="166" height="175" alt="Набор для путешествий &quot;Baxter of California&quot;">
+        <img src="img/shop-item/photo-item-3.jpg" width="166" height="175" alt="Набор для путешествий &quot;Baxter of California&quot;">
+        <img src="img/shop-item/photo-item-4.jpg" width="166" height="175" alt="Набор для путешествий &quot;Baxter of California&quot;">
       </section>
       <section class="item-description">
         <p>Есть в наличии</p>
@@ -91,9 +91,9 @@
         </section>
         <section class="footer-social">
           <p>Давайте дружить!</p>
-          <a class="social-btn social-btn-vk" href="#">ВКонтакте</a>
-          <a class="social-btn social-btn-fb" href="#">Фэйсбук</a>
-          <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
+          <a class="social-btn social-btn-vk" href="#"><img src="img/vk.png" width="12" height="12" alt="ВКонтакте"></a>
+          <a class="social-btn social-btn-fb" href="#"><img src="img/fb.png" width="12" height="12" alt="Фэйсбук"></a>
+          <a class="social-btn social-btn-inst" href="#"><img src="img/inst.png" width="12" height="12" alt="Инстаграм"></a>
         </section>
         <section class="footer-copyright">
           <p>Разработано:</p>
