--- a/shop.html
+++ b/shop.html
@@ -86,32 +86,32 @@
       </section>
       <section class="shop-items">
         <article>
-          <img src="img/photo-item-1" width="50" height="50" alt="Набор для путешествий &quot;Baxter of California&quot;">
+          <img src="img/shop/photo-item-1.jpg" width="220" height="165" alt="Набор для путешествий &quot;Baxter of California&quot;">
           <h2>Набор для путешествий "Baxter of California"</h2>
           <span>2900 руб.</span><a class="btn" href="#">Купить</a>
         </article>
         <article>
-          <img src="img/photo-item-2" width="50" height="50" alt="Увлажняющий кондиционер &quot;Baxter of California&quot;">
+          <img src="img/shop/photo-item-2.jpg" width="220" height="165" alt="Увлажняющий кондиционер &quot;Baxter of California&quot;">
           <h2>Увлажняющий кондиционер "Baxter of California"</h2>
           <span>750 руб.</span><a class="btn" href="#">Купить</a>
         </article>
         <article>
-          <img src="img/photo-item-3" width="50" height="50" alt="Гель для волос &quot;Suavecito&quot;">
+          <img src="img/shop/photo-item-3.jpg" width="220" height="165" alt="Гель для волос &quot;Suavecito&quot;">
           <h2>Гель для волос "Suavecito"</h2>
           <span>290 руб.</span><a class="btn" href="#">Купить</a>
         </article>
         <article>
-          <img src="img/photo-item-4" width="50" height="50" alt="Гель для укладки волос &quot;American Crew&quot;">
+          <img src="img/shop/photo-item-4.jpg" width="220" height="165" alt="Гель для укладки волос &quot;American Crew&quot;">
           <h2>Гель для укладки волос "American Crew"</h2>
           <span>500 руб.</span><a class="btn" href="#">Купить</a>
         </article>
         <article>
-          <img src="img/photo-item-5" width="50" height="50" alt="Гель для волос &quot;American Crew&quot;">
+          <img src="img/shop/photo-item-5.jpg" width="220" height="165" alt="Гель для волос &quot;American Crew&quot;">
           <h2>Гель для волос "American Crew"</h2>
           <span>300 руб.</span><a class="btn" href="#">Купить</a>
         </article>
         <article>
-          <img src="img/photo-item-6" width="50" height="50" alt="Набор для бритья &quot;Baxter of California&quot;">
+          <img src="img/shop/photo-item-6.jpg" width="220" height="165" alt="Набор для бритья &quot;Baxter of California&quot;">
           <h2>Набор для бритья "Baxter of California"</h2>
           <span>3900 руб.</span><a class="btn" href="#">Купить</a>
         </article>
@@ -143,9 +143,9 @@
         </section>
         <section class="footer-social">
           <p>Давайте дружить!</p>
-          <a class="social-btn social-btn-vk" href="#">ВКонтакте</a>
-          <a class="social-btn social-btn-fb" href="#">Фэйсбук</a>
-          <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
+          <a class="social-btn social-btn-vk" href="#"><img src="img/vk.png" width="12" height="12" alt="ВКонтакте"></a>
+          <a class="social-btn social-btn-fb" href="#"><img src="img/fb.png" width="12" height="12" alt="Фэйсбук"></a>
+          <a class="social-btn social-btn-inst" href="#"><img src="img/inst.png" width="12" height="12" alt="Инстаграм"></a>
         </section>
         <section class="footer-copyright">
           <p>Разработано:</p>
