Add fieldset and legend

--- a/shop.html
+++ b/shop.html
@@ -52,36 +52,40 @@
       </nav>
       <section class="shop-filtres">
         <form action="#" method="get">
-          <p>Производители:</p>
-          <label>
-            <input type="checkbox" name="manufacturer" value="Baxter of Californinia" checked> Baxter of Californinia
-          </label>
-          <label>
-            <input type="checkbox" name="manufacturer" value="Mr Natty"> Mr Natty
-          </label>
-          <label>
-            <input type="checkbox" name="manufacturer" value="Suavecito" checked> Suavecito
-          </label>
-          <label>
-            <input type="checkbox" name="manufacturer" value="Malin+Goetz"> Malin+Goetz
-          </label>
-          <label>
-            <input type="checkbox" name="manufacturer" value="Myrray's"> Myrray's
-          </label>
-          <label>
-            <input type="checkbox" name="manufacturer" value="American crew" checked> American crew
-          </label>
-          <p>Группы товаров:</p>
-          <label>
-            <input type="radio" name="group" value="Бритвенные принадлежности"> Бритвенные принадлежности
-          </label>
-          <label>
-            <input type="radio" name="group" value="Средства для ухода" checked> Средства для ухода
-          </label>
-          <label>
-            <input type="radio" name="group" value="Аксессуары"> Аксессуары
-          </label>
-          <input class="btn" type="submit" value="Показать">
+          <fieldset>
+            <legend>Производители:</legend>
+            <label>
+              <input type="checkbox" name="manufacturer" value="Baxter of Californinia" checked> Baxter of Californinia
+            </label>
+            <label>
+              <input type="checkbox" name="manufacturer" value="Mr Natty"> Mr Natty
+            </label>
+            <label>
+              <input type="checkbox" name="manufacturer" value="Suavecito" checked> Suavecito
+            </label>
+            <label>
+              <input type="checkbox" name="manufacturer" value="Malin+Goetz"> Malin+Goetz
+            </label>
+            <label>
+              <input type="checkbox" name="manufacturer" value="Myrray's"> Myrray's
+            </label>
+            <label>
+              <input type="checkbox" name="manufacturer" value="American crew" checked> American crew
+            </label>
+          </fieldset>
+          <fieldset>
+            <legend>Группы товаров:</legend>
+            <label>
+              <input type="radio" name="group" value="Бритвенные принадлежности"> Бритвенные принадлежности
+            </label>
+            <label>
+              <input type="radio" name="group" value="Средства для ухода" checked> Средства для ухода
+            </label>
+            <label>
+              <input type="radio" name="group" value="Аксессуары"> Аксессуары
+            </label>
+            <input class="btn" type="submit" value="Показать">
+          </fieldset>
         </form>
       </section>
       <section class="shop-items">
