--- a/shop.html
+++ b/shop.html
@@ -50,92 +50,94 @@
           </li>
         </ul>
       </nav>
-      <section class="shop-filtres">
-        <form action="#" method="get">
-          <fieldset>
-            <legend>Производители:</legend>
-            <label>
-              <input type="checkbox" name="manufacturer" value="Baxter of Californinia" checked> Baxter of Californinia
-            </label>
-            <label>
-              <input type="checkbox" name="manufacturer" value="Mr Natty"> Mr Natty
-            </label>
-            <label>
-              <input type="checkbox" name="manufacturer" value="Suavecito" checked> Suavecito
-            </label>
-            <label>
-              <input type="checkbox" name="manufacturer" value="Malin+Goetz"> Malin+Goetz
-            </label>
-            <label>
-              <input type="checkbox" name="manufacturer" value="Myrray's"> Myrray's
-            </label>
-            <label>
-              <input type="checkbox" name="manufacturer" value="American crew" checked> American crew
-            </label>
-          </fieldset>
-          <fieldset>
-            <legend>Группы товаров:</legend>
-            <label>
-              <input type="radio" name="group" value="Бритвенные принадлежности"> Бритвенные принадлежности
-            </label>
-            <label>
-              <input type="radio" name="group" value="Средства для ухода" checked> Средства для ухода
-            </label>
-            <label>
-              <input type="radio" name="group" value="Аксессуары"> Аксессуары
-            </label>
-            <input class="btn" type="submit" value="Показать">
-          </fieldset>
-        </form>
-      </section>
-      <section class="shop-items">
-        <article>
-          <img src="img/shop/photo-item-1.jpg" width="220" height="165" alt="Набор для путешествий &quot;Baxter of California&quot;">
-          <h2>Набор для путешествий "Baxter of California"</h2>
-          <span>2900 руб.</span><a class="btn" href="#">Купить</a>
-        </article>
-        <article>
-          <img src="img/shop/photo-item-2.jpg" width="220" height="165" alt="Увлажняющий кондиционер &quot;Baxter of California&quot;">
-          <h2>Увлажняющий кондиционер "Baxter of California"</h2>
-          <span>750 руб.</span><a class="btn" href="#">Купить</a>
-        </article>
-        <article>
-          <img src="img/shop/photo-item-3.jpg" width="220" height="165" alt="Гель для волос &quot;Suavecito&quot;">
-          <h2>Гель для волос "Suavecito"</h2>
-          <span>290 руб.</span><a class="btn" href="#">Купить</a>
-        </article>
-        <article>
-          <img src="img/shop/photo-item-4.jpg" width="220" height="165" alt="Гель для укладки волос &quot;American Crew&quot;">
-          <h2>Гель для укладки волос "American Crew"</h2>
-          <span>500 руб.</span><a class="btn" href="#">Купить</a>
-        </article>
-        <article>
-          <img src="img/shop/photo-item-5.jpg" width="220" height="165" alt="Гель для волос &quot;American Crew&quot;">
-          <h2>Гель для волос "American Crew"</h2>
-          <span>300 руб.</span><a class="btn" href="#">Купить</a>
-        </article>
-        <article>
-          <img src="img/shop/photo-item-6.jpg" width="220" height="165" alt="Набор для бритья &quot;Baxter of California&quot;">
-          <h2>Набор для бритья "Baxter of California"</h2>
-          <span>3900 руб.</span><a class="btn" href="#">Купить</a>
-        </article>
-        <nav class="shop-pages">
-          <ul>
-            <li>
-              <a class="btn" href="#">1</a>
-            </li>
-            <li>
-              <a class="btn btn-active" href="#">2</a>
-            </li>
-            <li>
-              <a class="btn" href="#">3</a>
-            </li>
-            <li>
-              <a class="btn" href="#">4</a>
-            </li>
-          </ul>
-        </nav>
-      </section>
+      <div class="shop-main-information clearfix">
+        <section class="shop-filters">
+          <form action="#" method="get">
+            <fieldset>
+              <legend>Производители:</legend>
+              <label>
+                <input type="checkbox" name="manufacturer" value="Baxter of Californinia" checked> Baxter of Californinia
+              </label>
+              <label>
+                <input type="checkbox" name="manufacturer" value="Mr Natty"> Mr Natty
+              </label>
+              <label>
+                <input type="checkbox" name="manufacturer" value="Suavecito" checked> Suavecito
+              </label>
+              <label>
+                <input type="checkbox" name="manufacturer" value="Malin+Goetz"> Malin+Goetz
+              </label>
+              <label>
+                <input type="checkbox" name="manufacturer" value="Myrray's"> Myrray's
+              </label>
+              <label>
+                <input type="checkbox" name="manufacturer" value="American crew" checked> American crew
+              </label>
+            </fieldset>
+            <fieldset>
+              <legend>Группы товаров:</legend>
+              <label>
+                <input type="radio" name="group" value="Бритвенные принадлежности"> Бритвенные принадлежности
+              </label>
+              <label>
+                <input type="radio" name="group" value="Средства для ухода" checked> Средства для ухода
+              </label>
+              <label>
+                <input type="radio" name="group" value="Аксессуары"> Аксессуары
+              </label>
+              <input class="btn" type="submit" value="Показать">
+            </fieldset>
+          </form>
+        </section>
+        <section class="shop-items">
+          <article>
+            <img src="img/shop/photo-item-1.jpg" width="220" height="165" alt="Набор для путешествий &quot;Baxter of California&quot;">
+            <h2>Набор для путешествий "Baxter of California"</h2>
+            <span>2900 руб.</span><a class="btn" href="#">Купить</a>
+          </article>
+          <article>
+            <img src="img/shop/photo-item-2.jpg" width="220" height="165" alt="Увлажняющий кондиционер &quot;Baxter of California&quot;">
+            <h2>Увлажняющий кондиционер "Baxter of California"</h2>
+            <span>750 руб.</span><a class="btn" href="#">Купить</a>
+          </article>
+          <article>
+            <img src="img/shop/photo-item-3.jpg" width="220" height="165" alt="Гель для волос &quot;Suavecito&quot;">
+            <h2>Гель для волос "Suavecito"</h2>
+            <span>290 руб.</span><a class="btn" href="#">Купить</a>
+          </article>
+          <article>
+            <img src="img/shop/photo-item-4.jpg" width="220" height="165" alt="Гель для укладки волос &quot;American Crew&quot;">
+            <h2>Гель для укладки волос "American Crew"</h2>
+            <span>500 руб.</span><a class="btn" href="#">Купить</a>
+          </article>
+          <article>
+            <img src="img/shop/photo-item-5.jpg" width="220" height="165" alt="Гель для волос &quot;American Crew&quot;">
+            <h2>Гель для волос "American Crew"</h2>
+            <span>300 руб.</span><a class="btn" href="#">Купить</a>
+          </article>
+          <article>
+            <img src="img/shop/photo-item-6.jpg" width="220" height="165" alt="Набор для бритья &quot;Baxter of California&quot;">
+            <h2>Набор для бритья "Baxter of California"</h2>
+            <span>3900 руб.</span><a class="btn" href="#">Купить</a>
+          </article>
+          <nav class="shop-pages">
+            <ul>
+              <li>
+                <a class="btn" href="#">1</a>
+              </li>
+              <li>
+                <a class="btn btn-active" href="#">2</a>
+              </li>
+              <li>
+                <a class="btn" href="#">3</a>
+              </li>
+              <li>
+                <a class="btn" href="#">4</a>
+              </li>
+            </ul>
+          </nav>
+        </section>
+      </div>
     </main>
     <footer class="main-footer">
       <div class="container">
