Add the grid for shop-item.html

--- a/shop.html
+++ b/shop.html
@@ -50,7 +50,7 @@
           </li>
         </ul>
       </nav>
-      <div class="shop-main-information clearfix">
+      <div class="main-information clearfix">
         <section class="shop-filters">
           <form action="#" method="get">
             <fieldset>
