--- a/shop-item.html
+++ b/shop-item.html
@@ -50,36 +50,38 @@
           </li>
         </ul>
       </nav>
-      <section class="item-photos">
-        <img src="img/shop-item/photo-item-1.jpg" width="486" height="524" alt="Набор для путешествий &quot;Baxter of California&quot;">
-        <img src="img/shop-item/photo-item-2.jpg" width="166" height="175" alt="Набор для путешествий &quot;Baxter of California&quot;">
-        <img src="img/shop-item/photo-item-3.jpg" width="166" height="175" alt="Набор для путешествий &quot;Baxter of California&quot;">
-        <img src="img/shop-item/photo-item-4.jpg" width="166" height="175" alt="Набор для путешествий &quot;Baxter of California&quot;">
-      </section>
-      <section class="item-description">
-        <p>Есть в наличии</p>
-        <p class="item-vendor-code">Артикул: Dexter-ae</p>
-        <p>Travel Kit – необходимый аксессуар во время любого путешествия. В аккуратной кожаной сумке находится все, что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха: средство для умывания, увлажняющий крем, крем для бритья, крем после бритья, шампунь. Набор также может стать отличным подарком.</p>
-        <span>2900 руб.</span><a class="btn" href="#">Купить</a>
-        <p>В набор входят:</p>
-        <ul>
-          <li>
-            Средство для умывания (50 мл)
-          </li>
-          <li>
-            Увлажняющий крем (50 мл)
-          </li>
-          <li>
-            Крем для бритья (50 мл)
-          </li>
-          <li>
-            Крем после бритья, шампунь (50 мл)
-          </li>
-          <li>
-            Удобная кожаная косметичка
-          </li>
-        </ul>
-      </section>
+      <div class="main-information clearfix">
+        <section class="item-photos">
+          <img src="img/shop-item/photo-item-1.jpg" width="460" height="500" alt="Набор для путешествий &quot;Baxter of California&quot;">
+          <img src="img/shop-item/photo-item-2.jpg" width="140" height="150" alt="Набор для путешествий &quot;Baxter of California&quot;">
+          <img src="img/shop-item/photo-item-3.jpg" width="140" height="150" alt="Набор для путешествий &quot;Baxter of California&quot;">
+          <img src="img/shop-item/photo-item-4.jpg" width="140" height="150" alt="Набор для путешествий &quot;Baxter of California&quot;">
+        </section>
+        <section class="item-description">
+          <p>Есть в наличии</p>
+          <p class="item-vendor-code">Артикул: Dexter-ae</p>
+          <p>Travel Kit – необходимый аксессуар во время любого путешествия. В аккуратной кожаной сумке находится все, что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха: средство для умывания, увлажняющий крем, крем для бритья, крем после бритья, шампунь. Набор также может стать отличным подарком.</p>
+          <span>2900 руб.</span><a class="btn" href="#">Купить</a>
+          <p>В набор входят:</p>
+          <ul>
+            <li>
+              Средство для умывания (50 мл)
+            </li>
+            <li>
+              Увлажняющий крем (50 мл)
+            </li>
+            <li>
+              Крем для бритья (50 мл)
+            </li>
+            <li>
+              Крем после бритья, шампунь (50 мл)
+            </li>
+            <li>
+              Удобная кожаная косметичка
+            </li>
+          </ul>
+        </section>
+      </div>
     </main>
     <footer class="main-footer">
       <div class="container">
