index.html has been done (HTML & CSS) without Pixel Perfect

--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>Барбершоп «Бородинский»</title>
+    <title>Барбершоп «Бородинский»</title>    
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&amp;subset=latin,cyrillic">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
     <header class="main-header">
       <div class="container clearfix">
-        <nav class="main-navigaton">
+        <nav class="main-navigation">
           <ul>
             <li>
               <a href="#">Информация</a>
@@ -69,10 +70,10 @@
         <div class="index-content-right">
           <h2 class="index-content-title">Галерея</h2>
           <div class="gallery">
-            <figure class="gallery-conent">
-              <img src="img/gallery.jpg" width="268" height="164" alt="">
+            <figure class="gallery-content">
+              <img src="img/gallery.jpg" width="286" height="164" alt="Галлерея">
             </figure>
-            <button class="btn gallery-prev" type="button">Назад</button>
+            <button class="btn gallery-prev" type="button" disabled>Назад</button>
             <button class="btn gallery-next" type="button">Вперёд</button>
           </div>
         </div>
@@ -96,7 +97,7 @@
         <div class="index-content-right">
           <h2 class="index-content-title">Записаться</h2>
           <p>Укажите желаемую дату и время, и мы свяжемся с вами для подтверждения брони
-            <form class="apointment-form" action="https://echo.htmlacademy.ru" method="post">
+            <form class="appointment-form" action="https://echo.htmlacademy.ru" method="post">
               <input type="text" name="date" value="" placeholder="Дата">
               <input type="text" name="time" value="" placeholder="Время">
               <input type="text" name="name" value="" placeholder="Ваше имя">
@@ -116,9 +117,9 @@
         </section>
         <section class="footer-social">
           <p>Давайте дружить!</p>
-          <a class="social-btn social-btn-vk" href="#"><img src="img/vk.png" width="12" height="12" alt="ВКонтакте"></a>
-          <a class="social-btn social-btn-fb" href="#"><img src="img/fb.png" width="12" height="12" alt="Фэйсбук"></a>
-          <a class="social-btn social-btn-inst" href="#"><img src="img/inst.png" width="12" height="12" alt="Инстаграм"></a>
+          <a class="social-btn social-btn-vk" href="#">ВКонтакте</a>
+          <a class="social-btn social-btn-fb" href="#">Фэйсбук</a>
+          <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
         </section>
         <section class="footer-copyright">
           <p>Разработано:</p>
