--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
               <a href="#">Магазин</a>
             </li>
             <li>
-              <a href="#">Контакт</a>
+              <a href="#">Контакты</a>
             </li>
           </ul>
         </nav>
@@ -45,11 +45,11 @@
         </div>
         <div class="features-item">
           <b class="features-name">Круто</b>
-          <p>Забудьте, как вы стриглись раньше. Мы сделаем из вас звезду футбола или кино! Во всяком случае внешне.</p>
+          <p>Забудьте, как вы стриглись раньше.<br> Мы сделаем из вас звезду футбола или кино! Во всяком случае внешне.</p>
         </div>
         <div class="features-item">
           <b class="features-name">Дорого</b>
-          <p>Наши мастера - профессионалы своего дела и не могут стоить дёшево. К тому же, разве цена не даёт определённый статус?</p>
+          <p>Наши мастера — профессионалы своего дела и не могут стоить дёшево. К тому же, разве цена не даёт определённый статус?</p>
         </div>
       </section>
       <div class="index-content clearfix">
@@ -68,7 +68,7 @@
           <a class="btn" href="#">Все новости</a>
         </div>
         <div class="index-content-right">
-          <h2 class="index-content-title">Галерея</h2>
+          <h2 class="index-content-title">Фотогалерея</h2>
           <div class="gallery">
             <figure class="gallery-content">
               <img src="img/gallery.jpg" width="286" height="164" alt="Галлерея">
@@ -80,7 +80,7 @@
       </div>
       <div class="index-content clearfix">
         <div class="index-content-left">
-          <h2 class="index-content-title">Контактая информация</h2>
+          <h2 class="index-content-title">Контактная информация</h2>
           <p>
             Барбершоп «Бородинский»<br>
             Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
@@ -111,8 +111,8 @@
       <div class="container clearfix">
         <section class="footer-contacts">
           Барбершоп «Бородинский»<br>
-          Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
-          <a href="#">Где нас найти?</a><br>
+          Адрес: г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
+          <a href="#">Как нас найти?</a><br>
           Телефон: +7 (495) 666-02-62
         </section>
         <section class="footer-social">
@@ -123,7 +123,7 @@
         </section>
         <section class="footer-copyright">
           <p>Разработано:</p>
-          <a class="btn" href="https://htmlacademy.ru">HTML Academy</a>
+          <a class="btn" href="https://htmlacademy.ru">HTMLAcademy.ru</a>
         </section>
       </div>
     </footer>
