--- a/shop.html
+++ b/shop.html
@@ -7,10 +7,13 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/styles.css">
   </head>
-  <body>
+  <body class="inner-page">
     <header class="main-header">
-      <div class="container">
-        <nav class="main-navigaton">
+      <div class="container clearfix">
+        <nav class="main-navigation">
+          <a class="logo-inner" href="index.html">
+            <img src="img/inner-logo.png" width="111" height="24" alt="Барбершоп «Бородинский»">
+          </a>
           <ul>
             <li>
               <a href="#">Информация</a>
@@ -19,13 +22,13 @@
               <a href="#">Новости</a>
             </li>
             <li>
-              <a href="#">Прайс-лист</a>
+              <a href="price.html">Прайс-лист</a>
+            </li>
+            <li class="active">
+              <span>Магазин</span>
             </li>
             <li>
-              <a href="#">Магазин</a>
-            </li>
-            <li>
-              <a href="#">Контакт</a>
+              <a href="#">Контакты</a>
             </li>
           </ul>
         </nav>
@@ -35,92 +38,69 @@
       </div>
     </header>
     <main class="container">
-      <h1>Набор для путешествий "Baxter of California"</h1>
-      <nav class="breadcrumbs">
-        <ul>
+      <div class="inner-page-title">
+        <h1>Средства для ухода</h1>
+        <ul class="breadcrumbs">
           <li>
-            <a href="#">Главная</a>
+            <a href="index.html">Главная</a>
           </li>
           <li>
-            <a href="#">Магазин</a>
+            <a href="index.html">Магазин</a>
           </li>
-          <li>
-            <a href="#">Средства для ухода</a>
-          </li>
-          <li>
-            Набор для путешествий "Baxter of California"
-          </li>
+          <li class="current">Средства для ухода</li>
         </ul>
-      </nav>
-      <div class="main-information clearfix">
+      </div>
+      <div class="inner-content clearfix">
         <section class="shop-filters">
           <form action="#" method="get">
             <fieldset>
               <legend>Производители:</legend>
-              <label>
-                <input type="checkbox" name="manufacturer" value="Baxter of Californinia" checked> Baxter of Californinia
-              </label>
-              <label>
-                <input type="checkbox" name="manufacturer" value="Mr Natty"> Mr Natty
-              </label>
-              <label>
-                <input type="checkbox" name="manufacturer" value="Suavecito" checked> Suavecito
-              </label>
-              <label>
-                <input type="checkbox" name="manufacturer" value="Malin+Goetz"> Malin+Goetz
-              </label>
-              <label>
-                <input type="checkbox" name="manufacturer" value="Myrray's"> Myrray's
-              </label>
-              <label>
-                <input type="checkbox" name="manufacturer" value="American crew" checked> American crew
-              </label>
+              <input type="checkbox" id="boc" name="manufacturer" value="Baxter of Californinia" checked><div class="square-for-checkbox"></div><label for="boc">Baxter of Californinia</label>
+              <input type="checkbox" id="mrnat" name="manufacturer" value="Mr Natty"><div class="square-for-checkbox"></div><label for="mrnat">Mr Natty</label>
+              <input type="checkbox" id="suav" name="manufacturer" value="Suavecito" checked><div class="square-for-checkbox"></div><label for="suav">Suavecito</label>
+              <input type="checkbox" id="malgoe" name="manufacturer" value="Malin+Goetz"><div class="square-for-checkbox"></div><label for="malgoe">Malin+Goetz</label>
+              <input type="checkbox" id="myr" name="manufacturer" value="Myrray's"><div class="square-for-checkbox"></div><label for="myr">Myrray's</label>
+              <input type="checkbox" id="amercrew" name="manufacturer" value="American crew" checked><div class="square-for-checkbox"></div><label for="amercrew">American crew</label>
             </fieldset>
             <fieldset>
               <legend>Группы товаров:</legend>
-              <label>
-                <input type="radio" name="group" value="Бритвенные принадлежности"> Бритвенные принадлежности
-              </label>
-              <label>
-                <input type="radio" name="group" value="Средства для ухода" checked> Средства для ухода
-              </label>
-              <label>
-                <input type="radio" name="group" value="Аксессуары"> Аксессуары
-              </label>
-              <input class="btn" type="submit" value="Показать">
+              <input type="radio" id="razer" name="group" value="Бритвенные принадлежности"><label for="razer">Бритвенные принадлежности</label>
+              <input type="radio" id="care" name="group" value="Средства для ухода" checked><label for="care">Средства для ухода</label>
+              <input type="radio" id="accessories" name="group" value="Аксессуары"><label for="accessories">Аксессуары</label>
             </fieldset>
+            <input class="btn btn-show" type="submit" value="Показать">
           </form>
         </section>
         <section class="shop-items">
-          <article>
-            <img src="img/shop/photo-item-1.jpg" width="220" height="165" alt="Набор для путешествий &quot;Baxter of California&quot;">
-            <h2>Набор для путешествий "Baxter of California"</h2>
-            <span>2900 руб.</span><a class="btn" href="#">Купить</a>
+          <article class="shop-item">
+            <a href="shop-item.html"><img src="img/shop/photo-item-1.jpg" width="220" height="165" alt="Набор для путешествий &quot;Baxter of California&quot;"></a>
+            <a href="shop-item.html"><h2>Набор для путешествий<br> «BAXTER OF CALIFORNIA»</h2></a>
+            <div class="shop-item-worth">2 900 руб.</div><a class="btn btn-buy" href="#">Купить</a>
           </article>
-          <article>
-            <img src="img/shop/photo-item-2.jpg" width="220" height="165" alt="Увлажняющий кондиционер &quot;Baxter of California&quot;">
-            <h2>Увлажняющий кондиционер "Baxter of California"</h2>
-            <span>750 руб.</span><a class="btn" href="#">Купить</a>
+          <article class="shop-item">
+            <a href="#"><img src="img/shop/photo-item-2.jpg" width="220" height="165" alt="Увлажняющий кондиционер &quot;Baxter of California&quot;"></a>
+            <a href="#"><h2>Увлажняющий кондиционер<br> «BAXTER OF CALIFORNIA»</h2></a>
+            <div class="shop-item-worth">750 руб.</div><a class="btn btn-buy" href="#">Купить</a>
           </article>
-          <article>
-            <img src="img/shop/photo-item-3.jpg" width="220" height="165" alt="Гель для волос &quot;Suavecito&quot;">
-            <h2>Гель для волос "Suavecito"</h2>
-            <span>290 руб.</span><a class="btn" href="#">Купить</a>
+          <article class="shop-item">
+            <a href="#"><img src="img/shop/photo-item-3.jpg" width="220" height="165" alt="Гель для волос &quot;Suavecito&quot;"></a>
+            <a href="#"><h2>Гель для волос<br> «SUAVETICO»</h2></a>
+            <div class="shop-item-worth">290 руб.</div><a class="btn btn-buy" href="#">Купить</a>
           </article>
-          <article>
-            <img src="img/shop/photo-item-4.jpg" width="220" height="165" alt="Гель для укладки волос &quot;American Crew&quot;">
-            <h2>Гель для укладки волос "American Crew"</h2>
-            <span>500 руб.</span><a class="btn" href="#">Купить</a>
+          <article class="shop-item">
+            <a href="#"><img src="img/shop/photo-item-4.jpg" width="220" height="165" alt="Гель для укладки волос &quot;American Crew&quot;"></a>
+            <a href="#"><h2>Гель для укладки волос<br> «AMERICAN CREW»</h2></a>
+            <div class="shop-item-worth">500 руб.</div><a class="btn btn-buy" href="#">Купить</a>
           </article>
-          <article>
-            <img src="img/shop/photo-item-5.jpg" width="220" height="165" alt="Гель для волос &quot;American Crew&quot;">
-            <h2>Гель для волос "American Crew"</h2>
-            <span>300 руб.</span><a class="btn" href="#">Купить</a>
+          <article class="shop-item">
+            <a href="#"><img src="img/shop/photo-item-5.jpg" width="220" height="165" alt="Гель для волос &quot;American Crew&quot;"></a>
+            <a href="#"><h2>Гель для волос<br> «AMERICAN CREW»</h2></a>
+            <div class="shop-item-worth">300 руб.</div><a class="btn btn-buy" href="#">Купить</a>
           </article>
-          <article>
-            <img src="img/shop/photo-item-6.jpg" width="220" height="165" alt="Набор для бритья &quot;Baxter of California&quot;">
-            <h2>Набор для бритья "Baxter of California"</h2>
-            <span>3900 руб.</span><a class="btn" href="#">Купить</a>
+          <article class="shop-item">
+            <a href="#"><img src="img/shop/photo-item-6.jpg" width="220" height="165" alt="Набор для бритья &quot;Baxter of California&quot;"></a>
+            <a href="#"><h2>Набор для бритья<br> «BAXTER OF CALIFORNIA»</h2></a>
+            <div class="shop-item-worth">3 900 руб.</div><a class="btn btn-buy" href="#">Купить</a>
           </article>
           <nav class="shop-pages">
             <ul>
@@ -128,7 +108,7 @@
                 <a class="btn" href="#">1</a>
               </li>
               <li>
-                <a class="btn btn-active" href="#">2</a>
+                <span class="btn btn-active" href="#">2</span>
               </li>
               <li>
                 <a class="btn" href="#">3</a>
@@ -142,22 +122,22 @@
       </div>
     </main>
     <footer class="main-footer">
-      <div class="container">
+      <div class="container clearfix">
         <section class="footer-contacts">
           Барбершоп «Бородинский»<br>
-          Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
-          <a href="#">Где нас найти?</a><br>
+          Адрес: г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
+          <a href="#">Как нас найти?</a><br>
           Телефон: +7 (495) 666-02-62
         </section>
         <section class="footer-social">
           <p>Давайте дружить!</p>
-          <a class="social-btn social-btn-vk" href="#"><img src="img/vk.png" width="12" height="12" alt="ВКонтакте"></a>
-          <a class="social-btn social-btn-fb" href="#"><img src="img/fb.png" width="12" height="12" alt="Фэйсбук"></a>
-          <a class="social-btn social-btn-inst" href="#"><img src="img/inst.png" width="12" height="12" alt="Инстаграм"></a>
+          <a class="social-btn social-btn-vk" href="#">ВКонтакте</a>
+          <a class="social-btn social-btn-fb" href="#">Фэйсбук</a>
+          <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
         </section>
         <section class="footer-copyright">
           <p>Разработано:</p>
-          <a class="btn" href="https://htmlacademy.ru">HTML Academy</a>
+          <a class="btn" href="https://htmlacademy.ru">HTMLAcademy.ru</a>
         </section>
       </div>
     </footer>
