--- a/shop.html
+++ b/shop.html
@@ -45,7 +45,7 @@
             <a href="index.html">Главная</a>
           </li>
           <li>
-            <a href="index.html">Магазин</a>
+            <a href="shop.html">Магазин</a>
           </li>
           <li class="current">Средства для ухода</li>
         </ul>
