--- a/shop-item.html
+++ b/shop-item.html
@@ -45,10 +45,10 @@
             <a href="index.html">Главная</a>
           </li>
           <li>
-            <a href="index.html">Магазин</a>
+            <a href="shop.html">Магазин</a>
           </li>
           <li>
-            <a href="index.html">Средства для ухода</a>
+            <a href="#">Средства для ухода</a>
           </li>
           <li class="current">Набор для путешествий «Baxter of California»</li>
         </ul>
