--- a/shop-item.html
+++ b/shop-item.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <title>Барбершоп «Бородинский»</title>    
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&amp;subset=latin,cyrillic">
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/min-normalize.css">
+    <link rel="stylesheet" href="css/min-styles.css">
   </head>
 <body class="inner-page">
     <header class="main-header">
