--- a/shop.html
+++ b/shop.html
@@ -140,6 +140,23 @@
           <a class="btn" href="https://htmlacademy.ru">HTMLAcademy.ru</a>
         </section>
       </div>
-    </footer>
+    </footer>    
+    <div class="modal-content">
+      <button class="modal-content-close" type="button" title="Закрыть">Закрыть</button>
+      <h2 class="modal-content-title">Личный кабинет</h2>
+      <p>Введите свой логин и пароль.</p>
+      <form class="login-form" action="https://echo.htmlacademy.ru" method="post">
+        <input class="icon-user" type="text" name="login" placeholder="Логин" required>
+        <input class="icon-password" type="password"  name="password" placeholder="Пароль" required>
+        <label class="login-checkbox">
+          <input type="checkbox" name="remember">
+          <span class="checkbox-indicator"></span>
+          Запомните меня
+        </label>
+        <a class="restore" href="#">Я забыл пароль!</a>
+        <button class="btn" type="submit">Войти</button>
+      </form>
+    </div>
+    <script src="js/min-script.js"></script>
   </body>
 </html>
